Added Customer Management & Registration

--- a/SmartSales/app/src/main/res/layout/activity_consultation.xml
+++ b/SmartSales/app/src/main/res/layout/activity_consultation.xml
@@ -1,9 +1,10 @@
 <RelativeLayout
+    android:id="@+id/consultation_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_consultation"
+    android:background="@drawable/settings_bg"
     tools:context="com.hyundai.teli.smartsales.activities.Home">
 
     <android.support.v7.widget.Toolbar
