--- a/SmartSales/app/src/main/res/layout/activity_sign_up.xml
+++ b/SmartSales/app/src/main/res/layout/activity_sign_up.xml
@@ -21,12 +21,12 @@
         android:scaleType="fitXY"
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/dealer_email"
-        android:layout_alignTop="@+id/input_first_name"
+        android:layout_alignTop="@+id/tv_name"
         android:layout_alignBottom="@+id/dealer_mobile_no" />
     <!-- first name -->
 
     <Spinner
-        android:id="@+id/input_first_name"
+        android:id="@+id/tv_name"
         style="@style/SettingInputBox02"
         android:layout_width="100dp"
         android:layout_height="40dp"
@@ -43,8 +43,8 @@
         style="@style/SettingInputBox02"
         android:layout_width="168dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@id/input_first_name"
-        android:layout_toRightOf="@id/input_first_name"
+        android:layout_alignTop="@id/tv_name"
+        android:layout_toRightOf="@id/tv_name"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"
         android:hint="@string/prompt_input_full_name"
@@ -58,7 +58,7 @@
         style="@style/SettingInputBox02"
         android:layout_width="352dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@id/input_first_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/full_name"
         android:layout_marginBottom="6dp"
         android:hint="@string/prompt_input_email"
@@ -70,7 +70,7 @@
         style="@style/SettingInputBox02"
         android:layout_width="352dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@id/input_first_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/dealer_email"
         android:layout_marginBottom="6dp"
         android:hint="@string/dealer_id"
@@ -82,7 +82,7 @@
         style="@style/SettingInputBox02"
         android:layout_width="352dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@id/input_first_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/dealer_id"
         android:layout_marginBottom="6dp"
         android:hint="@string/prompt_input_branch"
@@ -94,7 +94,7 @@
         android:layout_width="352dp"
         android:layout_height="40dp"
         style="@style/SettingInputBox02"
-        android:layout_alignLeft="@id/input_first_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/dealer_branch"
         android:layout_marginBottom="6dp"
         android:hint="@string/prompt_input_branch_tel"
@@ -107,7 +107,7 @@
         android:layout_width="352dp"
         android:layout_height="40dp"
         style="@style/SettingInputBox02"
-        android:layout_alignLeft="@id/input_first_name"
+        android:layout_alignLeft="@id/tv_name"
         android:layout_below="@id/dealer_branch_tel"
         android:layout_marginBottom="6dp"
         android:hint="@string/prompt_input_mobile"
