--- a/SmartSales/app/src/main/res/layout/fragment_customer_management.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_customer_management.xml
@@ -1,17 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/settings_bg">
 
-
-    <TextView
+    <ImageView
+        android:id="@+id/listTopView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CUSTOMER MANAGEMENT"
-        android:id="@+id/textView"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:src="@drawable/customer_list_top" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/registerButton"
+        android:layout_alignLeft="@id/listTopView"
+        android:layout_alignRight="@id/listTopView"
+        android:layout_below="@id/listTopView"
+        android:background="#d6d6d6"
+        android:divider="#d6d6d6"
+        android:dividerHeight="1dp" >
+    </ListView>
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="61dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="42dp"
+        android:background="@drawable/customer_btn_register" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/registerButton"
+        android:layout_toLeftOf="@+id/registerButton"
+        android:background="@drawable/customer_btn_delete" />
+
 </RelativeLayout>
