--- a/SmartSales/app/src/main/res/layout/fragment_settings.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_settings.xml
@@ -117,5 +117,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/linearLayout" />
+        android:layout_below="@+id/linearLayout"/>
+
+    <FrameLayout
+        android:id="@+id/registration_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/linearLayout"
+        android:visibility="gone"/>
 </RelativeLayout>
