--- a/SmartSales/app/src/main/res/layout/fragment_showroom.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_showroom.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/horizontal_scroll"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg_consultation">
 
     <LinearLayout
         android:id="@+id/car_container"
