--- a/SmartSales/app/src/main/res/values/styles.xml
+++ b/SmartSales/app/src/main/res/values/styles.xml
@@ -42,4 +42,38 @@
         <item name="android:progressDrawable">@drawable/progress_bar_data_update</item>
     </style>
 
+    <style name="CustomerText1">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CustomerText3">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="CustomerDeliveryInput">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/edit_box_selector</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="DeliveryText1">
+        <item name="android:textColor">#262932</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="DeliveryText2">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:drawableRight">@drawable/checkbox</item>
+        <item name="android:button">@null</item>
+    </style>
+
+    <style name="DeliveryText3">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
