--- a/SmartSales/app/src/main/res/layout/dialog_customer_delivery.xml
+++ b/SmartSales/app/src/main/res/layout/dialog_customer_delivery.xml
@@ -550,7 +550,7 @@
                     android:visibility="gone" />
 
                 <Button
-                    android:id="@+id/saveButton"
+                    android:id="@+id/btn_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/descTextView2"
@@ -563,11 +563,10 @@
                     android:id="@+id/btn_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@id/saveButton"
-                    android:layout_toLeftOf="@+id/saveButton"
+                    android:layout_alignBottom="@id/btn_register"
+                    android:layout_toLeftOf="@+id/btn_register"
                     android:background="@drawable/customer_btn_cancel_black" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
-
 </ScrollView>
