--- a/SmartSales/app/src/main/res/layout/fragment_performance.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_performance.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/bg_consultation"
     android:weightSum="7">
 
     <android.support.v4.view.ViewPager
@@ -12,23 +13,25 @@
   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:layout_weight="5">
+      android:layout_weight="5"
+      android:padding="5dp"
+      android:background="@null">
 
       <ImageButton
           android:id="@+id/performance_button"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:src="@drawable/bg_perfo_top_bar"/>
-
+          android:background="#3f3f3f"
+          android:src="@drawable/bg_perfo_top_bar"
+          />
 
       <ListView
           android:id="@+id/performance_list"
           android:layout_below="@id/performance_button"
           android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:background="#ffffff"
-
-
+          android:layout_height="wrap_content"
+          android:background="#3f3f3f"
+          android:dividerHeight="3dp"
           />
       </RelativeLayout>
 
