--- a/SmartSales/app/src/main/res/drawable/listitem_selector.xml
+++ b/SmartSales/app/src/main/res/drawable/listitem_selector.xml
@@ -1,25 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Non focused states -->
+
     <item
         android:state_focused="false"
         android:state_selected="false"
         android:state_pressed="false"
-         />
+        android:drawable="@drawable/list_item_default_color"
+        />
     <item
         android:state_focused="false"
-        android:state_selected="true"
         android:state_pressed="false"
-        android:drawable="@drawable/settings_tab_pressed"
-         />
+        android:state_selected="true"
+        android:drawable="@drawable/list_item_select_color" />
     <!-- Focused states -->
     <item
-        android:state_focused="true"
-        android:state_selected="true"
         android:state_pressed="false"
-         />
+        android:state_selected="false"
+        android:state_focused="true"
+        android:drawable="@drawable/list_item_select_color"/>
     <!-- Pressed state -->
     <item
+        android:state_selected="false"
+        android:state_focused="false"
         android:state_pressed="true"
-         />
+        android:drawable="@drawable/list_item_select_color" />
+
+    <!--<item android:state_selected="false"-->
+    <!--android:state_focused="false"-->
+    <!--android:drawable="@drawable/list_item_default_color" />-->
+
+    <!--<item android:state_selected="false"-->
+    <!--android:state_focused="true"-->
+    <!--android:drawable="@drawable/list_item_default_color" />-->
+
+    <!--<item android:state_selected="true"-->
+    <!--android:state_focused="true"-->
+    <!--android:drawable="@drawable/list_item_select_color" />-->
+
+    <!--<item android:state_selected="true"-->
+    <!--android:state_focused="false"-->
+    <!--android:drawable="@drawable/list_item_select_color" />-->
+
+    <!--<item android:drawable="@drawable/list_item_default_color" />-->
+
 </selector>
+
+
+
