--- a/SmartSales/app/src/main/res/layout/fragment_performance.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_performance.xml
@@ -14,7 +14,8 @@
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_weight="5"
-      android:padding="5dp"
+      android:paddingLeft="10dp"
+      android:paddingRight="10dp"
       android:background="@null">
 
       <ImageButton
@@ -23,6 +24,7 @@
           android:layout_height="wrap_content"
           android:background="#3f3f3f"
           android:src="@drawable/bg_perfo_top_bar"
+          android:scaleType="fitXY"
           />
 
       <ListView
@@ -30,8 +32,9 @@
           android:layout_below="@id/performance_button"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
+          android:layout_marginTop="10dp"
           android:background="#3f3f3f"
-          android:dividerHeight="3dp"
+          android:dividerHeight="8dp"
           />
       </RelativeLayout>
 
