--- a/SmartSales/app/src/main/res/layout/fragment_specification.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_specification.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/bg_consultation"
-    android:weightSum="7">
+    >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/specification_pager"
-        android:layout_width="fill_parent"
+        android:layout_width="930dp"
         android:layout_height="fill_parent"
-        android:layout_weight="2"/>
+        android:isScrollContainer="true"
+       />
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="5"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:background="@null">
+        android:layout_toRightOf="@+id/specification_pager"
+        android:id="@+id/relativeLayout">
 
         <ImageView
             android:id="@+id/specification_button"
@@ -25,17 +27,23 @@
             android:background="#3f3f3f"
             android:src="@drawable/bg_perfo_top_bar"
             android:scaleType="fitXY"
+            android:layout_alignParentTop="true"
             />
 
         <ListView
             android:id="@+id/specification_list"
-            android:layout_below="@id/specification_button"
+            android:layout_below="@+id/specification_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:background="#3f3f3f"
+            android:layout_marginTop="10dp"
             android:dividerHeight="8dp"
             />
+
     </RelativeLayout>
 
-</LinearLayout>
+
+
+
+
+</RelativeLayout>
