--- a/SmartSales/app/src/main/res/layout/fragment_style.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_style.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/bg_consultation"
     android:weightSum="3"
     >
 
@@ -28,7 +29,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:src="@drawable/btn_style_exterior_disable"
+                android:src="@drawable/btn_style_exterior_enable"
                 android:background="@null"
                 />
             <ImageButton
