Added QuickMenu to BrandStory, Consultation & CarDetails

--- a/SmartSales/app/src/main/res/layout/activity_car_details.xml
+++ b/SmartSales/app/src/main/res/layout/activity_car_details.xml
@@ -32,10 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/action_bar_bg"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/modelName"
         android:layout_toEndOf="@+id/modelName"
-        android:layout_alignBottom="@+id/modelName"
-        android:layout_below="@+id/menuListView">
+        android:layout_above="@+id/frame_container">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/action_bar_toolbar"
@@ -148,49 +148,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </FrameLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/menuListView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="gone"
-        android:layout_alignTop="@+id/frame_container">
-
-        <ImageView
-            android:id="@+id/menuHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/home"/>
-
-        <ImageView
-            android:id="@+id/menuCatalog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/catalogue"
-            android:layout_below="@+id/menuHome"/>
-
-        <ImageView
-            android:id="@+id/menuDealerLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dealer_location"
-            android:layout_below="@+id/menuCatalog"/>
-
-        <ImageView
-            android:id="@+id/menuRequestTD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/test_drive"
-            android:layout_below="@+id/menuDealerLocation"/>
-
-        <ImageView
-            android:id="@+id/menuGame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/game"
-            android:layout_below="@+id/menuRequestTD"/>
-        </RelativeLayout>
 
 </RelativeLayout>
