--- a/SmartSales/app/src/main/res/values/styles.xml
+++ b/SmartSales/app/src/main/res/values/styles.xml
@@ -76,4 +76,99 @@
         <item name="android:textColor">#808080</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="profilePicGroupName">
+        <item name="android:textSize">70sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="profileTitle">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/profile_title_blue</item>
+    </style>
+
+    <style name="profileText">
+        <item name="android:textSize">52sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="quote_final_pop_title">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/quote_discount_footer_text</item>
+    </style>
+
+    <style name="send_email_form_text">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="send_email_input_form">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/send_email_popup_input</item>
+        <item name="android:background">@drawable/edit_box_selector</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:paddingLeft">8dp</item>
+    </style>
+
+    <style name="estimateCarPrice">
+        <item name="android:textColor">@color/estimateCarPrice</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="estimateCarPrice2">
+        <item name="android:textColor">#5c5e6a</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="estimate_Calcualte">
+        <item name="android:textColor">@color/text_black02</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="send_email_send_form">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="BtnBlackMaxico">
+        <item name="android:background">@drawable/kia_btn_black_h48</item>
+        <item name="android:textColor">@color/item_default_light</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="estimateOptionText">
+        <item name="android:textColor">@color/text_dark_grey</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="estimate_modelText">
+        <item name="android:textColor">@color/text_dark_grey</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="estimateOptionPrice">
+        <item name="android:textColor">@color/text_black02</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="send_email_name_card">
+        <item name="android:textSize">8sp</item>
+        <item name="android:textColor">@color/send_email_popup_name_card_text</item>
+    </style>
+
+    <style name="send_email_total_price">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/send_email_popup_total_price</item>
+    </style>
+
+    <style name="send_email_price">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/send_email_popup_price</item>
+    </style>
+
 </resources>
