--- a/SmartSales/app/src/main/res/layout/specification_pager_item.xml
+++ b/SmartSales/app/src/main/res/layout/specification_pager_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/specification_pager_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         />
 
-</RelativeLayout>
+</ScrollView>
