--- a/SmartSales/app/src/main/res/layout/fragment_performance.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_performance.xml
@@ -3,17 +3,16 @@
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/bg_consultation"
-    android:weightSum="7">
+    >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/performance_pager"
-        android:layout_width="fill_parent"
+        android:layout_width="939dp"
         android:layout_height="fill_parent"
-        android:layout_weight="2"/>
+        />
   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:layout_weight="5"
       android:paddingLeft="10dp"
       android:paddingRight="10dp"
       android:background="@null">
