--- a/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
@@ -3,21 +3,20 @@
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/bg_consultation"
-    android:weightSum="3"
+
     >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/safety_pager"
-        android:layout_width="fill_parent"
+        android:layout_width="939dp"
         android:layout_height="fill_parent"
-       android:layout_weight="1">
+       >
 
        </android.support.v4.view.ViewPager>
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="2"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         >
