--- a/SmartSales/app/src/main/res/layout/activity_home.xml
+++ b/SmartSales/app/src/main/res/layout/activity_home.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentBottom="true" />
 
     <ImageView
+        android:id="@+id/logo_hyundai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
@@ -24,6 +25,7 @@
         android:src="@drawable/gateway_logo" />
 
     <LinearLayout
+        android:id="@+id/home_icons_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
