--- a/SmartSales/app/src/main/res/layout/fragment_virtual_reality.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_virtual_reality.xml
@@ -5,11 +5,24 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_vr">
 
+    <ImageButton
+        android:id="@+id/vr_play"
+        android:layout_margin="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/vr_play_square"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/vr_flipper"
+        android:layout_alignEnd="@+id/vr_flipper" />
+
     <ViewFlipper
         android:id="@+id/vr_flipper"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="6dp" >
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_below="@+id/vr_play">
 
     </ViewFlipper>
 
