--- a/SmartSales/app/src/main/res/layout/fragment_style_interior.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_style_interior.xml
@@ -2,16 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/bg_consultation"
+    android:background="@drawable/settings_bg"
     android:weightSum="3"
     >
+    <RelativeLayout
+        android:id="@+id/relativeLayout_hotspot"
+        android:layout_width="940dp"
+        android:layout_height="fill_parent">
 
     <android.support.v4.view.ViewPager
-        android:layout_width="fill_parent"
+        android:id="@+id/interior_pager"
+        android:layout_width="940dp"
         android:layout_height="fill_parent"
-       android:layout_weight="1">
+        android:visibility="invisible"
+         />
+      <ImageView
+          android:id="@+id/interior_main_image"
+          android:layout_width="940dp"
+          android:layout_height="fill_parent" />
+    </RelativeLayout>
 
-       </android.support.v4.view.ViewPager>
+
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -21,25 +32,27 @@
 
         <LinearLayout
             android:id="@+id/style_main_names_ll"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2">
             <ImageButton
+                android:id="@+id/exterior_button"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:src="@drawable/btn_style_exterior_enable"
+                android:src="@drawable/btn_style_exterior_disable"
                 android:background="@null"
                 />
             <ImageButton
+                android:id="@+id/interior_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/btn_style_interior_disable"
+                android:src="@drawable/btn_style_interior_enable"
                 android:background="@null"/>
-            </LinearLayout>
-        
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/style_interior_exterior_ll"
             android:layout_below="@id/style_main_names_ll"
@@ -49,26 +62,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
+                android:padding="10dp"
                 android:src="@drawable/btn_add_plus"
                 android:background="@null"
                 />
             <com.hyundai.teli.smartsales.views.HTextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Exterior"
-                android:layout_marginTop="40dp"
+                android:text="Interior"
+                android:textSize="20sp"
+                android:padding="10dp"
                 android:textColor="@android:color/white"
                 android:layout_marginLeft="30dp"/>
-            </LinearLayout>
+        </LinearLayout>
 
         <ListView
             android:id="@+id/style_list"
             android:layout_below="@id/style_interior_exterior_ll"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_marginTop="10dp"
+            android:dividerHeight="8dp"
             />
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
