--- a/SmartSales/app/src/main/res/layout/fragment_catalog.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_catalog.xml
@@ -3,8 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/settings_bg">
+    android:background="@drawable/bg_consultation">
 
+
+    <com.joanzapata.pdfview.PDFView
+        android:id="@+id/pdfview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,6 +17,7 @@
         android:text="CATALOG"
         android:id="@+id/textView"
         android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"/>
 </RelativeLayout>
